1.8.23
------
(RB=162866)
Change FixedTemplate to output using ByteString.toString() instead of asAvroString
Add more test cases for generated DataTemplate.

(RB=163290)
Fix bug where @Optional on finder assocKeys was not respected.

1.8.22
------
(RB=162206)
fix logging message for D2

(RB=161556)
Use thread context classpath instead of pegasus classpath when using Class.forName on names of
coercers, validators and avro custom data translators.

(RB=161961)
Add copy() and clone() methods to generated non-record DataTemplates.
Generated record DataTemplates have had these methods since 1.8.4.

(RB=162841)
Adding new resource class is a backward compatible change now.
Add instruction message for idl compatibility check failure.

1.8.21
------
(RB=162036)
Fix UnsupportedOperationException from SimpleLoadBalancerSTate while creating transportClientProperties for https

1.8.20
------
(RB=161479)
made TARGET_SERVICE_KEY_NAME a public static variable

(RB=154752)
Fix bug where shutdown of HttpClientFactory will fail if the final
event leading to shutdown occurs on a Netty IO thread.

(RB=159386)
Support typerefs in association keys for batch responses.

(RB=160441)
Disable interning of field names by Jackson parser. 
This should reduce intended growth in perm gen.

(RB=160184)
Add embedded schema to Avro schema translated from Pegasus schema
This allows reverse translation without loss (e.g. loss of typeref, custom translation instructions).

1.8.19
------
(RB=158603)
Fix bug that context path is missing in docgen "View in JSON format" link.

(RB=154315)
Add SSL support in D2 client.

1.8.18
------
(RB=157884)
Fix NPE in Data Template generator when an array item or map value type is a typeref'ed union.

(RB=157128)
Fix queryParamsDataMap not able to convert single element query to StringArray

1.8.17
------
(RB=157735)
fix default and master service bugs in D2ConfigCmdline

1.8.16
-------
(RB=154319)