@@ -17,7 +17,7 @@
         "name" : "tone",
         "type" : "array",
         "items": "com.linkedin.greetings.api.Tone",
-        "optional" : false
+        "optional" : true
       }, {
         "name" : "newParam",
         "type" : "int",
@@ -52,7 +52,8 @@
         "type" : "com.linkedin.groups.api.TransferOwnershipRequest"
       }, {
         "name" : "someString",
-        "type" : "string"
+        "type" : "string",
+        "default" : "default"
       }, {
         "name" : "stringMap",
         "type" : {
